stretch goal: make nav fixed with less opacity

--- a/css/index.css
+++ b/css/index.css
@@ -183,6 +183,9 @@ a {
   padding: 2rem 0 1rem;
   text-align: center;
   border-bottom: 1px solid #F1F1F1;
+  position: fixed;
+  width: 100%;
+  opacity: 0.8;
 }
 .navigation nav {
   margin-top: 1rem;
