--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,9 @@
     padding: 2rem 0 1rem;
     text-align: center;
     border-bottom: 1px solid @nav-border;
+    position: fixed;
+    width: 100%;
+    opacity: 0.8;
 
         nav {
             margin-top: 1rem;
